# test_codes

./: .gitignore  .tasks  a  a.cpp  a.py  better_print  better_print.cpp  car.py  nest.py  r  test_args.py
bash/: color.sh
cpp/: .clangd  .tasks  CMakeLists.txtbase  a.cpp  b.cpp  better_print.cpp  better_print.hpp  c.sh  change_target.sh  cp_mv_test.cpp  cv_and_priority_queue.cpp  experimental_future.cpp  memory_usage.cpp  memory_usage.hpp  messaging.hpp  ploymorphic.cpp  ploymorphic.cpp.html  print.hpp  r  run.sh  run_only.sh  sleep.cpp  state_machine.cpp  stop_thread.cpp  test.cpp  test_auto.cpp  test_h_map.cpp  test_message_chain.cpp  test_msg_queue.cpp  test_std_array.cpp  test_std_array2.cpp  test_throw.cpp  test_typename_class.cpp  test_unique_ptr.cpp  testmain.cpp  thread_pool.cpp  time_cal_using_decorators.cpp  time_cal_using_decorators.hpp
cpp/Promise_js_like/: CMakeLists.txt  main.cpp  promise.hpp  promise_resolver.hpp  promise_state.hpp  promise_state_base.hpp  promise_status_machine.hpp  test_event_loop.cpp  test_event_loop.sh  to_be_checked.hpp
cpp/asio/: .clangd  CMakeLists.txt  change_target.sh  echo_server_tcp.cpp  echo_server_tcp2.cpp  echo_server_tcp_multi_listeners_with_exception_catch.cpp  life.cpp  main.cpp  multi_task_coroutine.cpp  multi_task_coroutine.hpp  readme.txt  run.sh  test.cpp  test_http_strand.cpp  test_work_guard.cpp
cpp/async/: CMakeLists.txt  async_future.cpp  async_future2.cpp  async_future3.cpp  async_wait_for.cpp  do_mul_things_same_time.cpp  main.cpp  run.sh
cpp/benchmark/: sltbench.sh
cpp/benchmark/my_test/: .tasks  CMakeLists.txt  compare_functions.cpp  m_ptr_value_queue_compare.cpp  run.sh
cpp/boost_asio/: CMakeLists.txt  main.cpp  run.sh
cpp/boost_outcome/: CMakeLists.txt  main.cpp
cpp/class_as_func/: main.cpp
cpp/cmake_test/: main.cpp
cpp/co_1130/: CMakeLists.txt  coroutine_state_machine.hpp  example.hpp  example_multi_coro.hpp  example_return_value.hpp  example_return_void.hpp  main.cpp  simple_example.hpp  simple_example_output.txt  test_co_await.hpp  test_co_await_with_transform.hpp  test_co_return.hpp  test_co_return_with_return_value.hpp  test_co_yield.hpp
cpp/conditional_varible/: main.cpp  multi_cv.cpp  run.sh  use_unlock.cpp  use_without_unlock.cpp
cpp/coro_epoll_kqueue/: CMakeLists.txt  CMakeLists.txt_for_test  awaiters.h  echo_server.cpp  run.sh
cpp/coroutine/: CMakeLists.txt  CMakeLists.txtcoroutine  co_await.cpp  co_return.cpp  co_vs_callback.cpp  co_yield_generator.cpp  main.cpp  main_test_half.cpp  multi_task_coroutine.cpp  test_promise.cpp  test_then.cpp
cpp/d_star/: dstar.tgz  main.cpp  main.cpp_bak
cpp/design_pattern_ytb/: main.cpp  strategy.cpp
cpp/exceptions/: test_exceptions.cpp
cpp/future_and_promise/: CMakeLists.txt  main.cpp
cpp/leveldb/: CMakeLists.txt  main.cpp
cpp/map_instead_if/: main.cpp
cpp/map_test/: main.cpp  run.sh
cpp/move/: main.cpp
cpp/nameof/: CMakeLists.txt  main.cpp
cpp/open_thread/: CMakeLists.txt  await.cpp  main.cpp  readme.txt
cpp/perf/: CMakeLists.txt  main.cpp
cpp/pybind11/: CMakeCache.txt  CMakeLists.txt  compile_commands.json  example.cpp  list_example.cpp  run.sh
cpp/reactor_and_proactor/: CMakeLists.txt  fcntl_use.cpp  proactor.cpp  reactor.cpp  reactor_nake.cpp  reactor_shared.cpp  reactor_unique.cpp  readme.md  run.sh  run_only.sh  strand_test.cpp  test_file_reader.cpp  test_file_reader_c.cpp
cpp/short_path/: bellman_ford.cpp  main.cpp
cpp/snip/: CMakeLists.txt  a.cpp  a.sh  aprint.hpp  check_tcp_port_avaiable.cpp  lambda_with_unique_ptr_or_std_move.cpp  main.cpp  optional.cpp  rm.sh  test.cpp  test.hpp  test_print.cpp  test_std_move.cpp  test_throw.cpp  test_throw_declaration.cpp  test_union.cpp  thread_local.cpp  unique_ptr_with_lambda.cpp
cpp/state_machine/: .clang-tidy  main.cpp  state_machine.cpp
cpp/std_function/: README.md  basic_function.cpp  callback_function.cpp
cpp/stdexec_senders/: CMakeLists.txt  main.cpp
cpp/stl/: main.cpp  test_iterator.cpp
cpp/tag_type/: main.cpp  tag_type.cpp
cpp/thread_safe/: main.cpp
cpp/time/: CMakeLists.txt  time_cal_using_decorators.cpp  time_cal_using_decorators.hpp  time_out_using_condition_variable.cpp  timestamp_to_timepoint.cpp
cpp/traits/: no_traits.cpp
cpp/understanding-the-compiler-transform/: main.cpp  task.cpp  task.hpp
cpp/utils/: test_cast  test_cast.cpp
cpp/uvw/: CMakeLists.txt  main.cpp
cpp/valgrind/: clean.sh  show.sh  test.cpp  test.sh  test_massif.cpp  test_stl_container.cpp
cpp/visit/: CMakeLists.txt  main.cpp
experimental/detail/: expected.hpp
fp/: a.js  a.py
js/: a.js  promise.js  test_async.js  test_async.ts  test_async_playground.js  test_async_playground.ts  tsconfig.json
js/canvas/: a.js
js/coroutine/: coroutine_test-es6.js  coroutine_test.js  generator_fulfilling.js  generator_pulling_alltogether.js  generator_rejecting.js  medium.js  test_1.js
lua/: .luarc.json  co.lua  co_async_tasks.lua  co_producer_consumer.lua  co_state_machine.lua  co_task_with_priority.lua
python/: date.py  extract_number.py  log_use.py  test_args.py  test_parent_function.py  test_reflect.py
python/asyio/: basic.py  concurrently.py  future.py  tasks.py
python/basemodel/: test.py
python/coroutine_and_state_machine/: .tasks  asyncio_bak.py  example.py  example_no_async.py
python/mid2end/: interface_middle2end.py
python/pywebio/: convert_json2py.py  get_converted_json.py  get_ue_info.py  incentive_source.json  new_incentive_source.json  send_config_to_control_module.py  test.json  ue_info.json  ui_control.py
python/reflect/: all_members.py  convert_class2proto.py  main.py  utils.py
python/snip/: default_value_in_function.py  test_decorate.py  test_with_in_class.py
python/tcp/: server.py
python/test_fastapi.py/: main.py
python/test_import/: b.py  main.py  pyproject.toml  utils.py
python/test_not_exist_class.py/: a.py
python/test_proto/: example.proto  example_pb2.py  example_pb2_grpc.py  gRPC_client.py  gRPC_server.py
python/test_python_asyncio/: a.py  basic.py  tt.py
python_invoke_cpp/: invoke.py  mylib.cpp
ts/class/: base.cjs  (+12 more)
(+24 files in other folders)
